@@ -9,6 +9,7 @@ import com.sparta.greeypeople.order.dto.request.OrderRequestDto;
 import com.sparta.greeypeople.order.dto.response.OrderResponseDto;
 import com.sparta.greeypeople.order.entity.Order;
 import com.sparta.greeypeople.order.entity.OrderMenu;
+import com.sparta.greeypeople.order.enumeration.Process;
 import com.sparta.greeypeople.order.repository.OrderMenuRepository;
 import com.sparta.greeypeople.order.repository.OrderRepository;
 import com.sparta.greeypeople.store.entity.Store;
@@ -29,14 +30,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class OrderService {
     private final OrderRepository orderRepository;
     private final StoreRepository storeRepository;
-    private final OrderMenuRepository orderMenuRepository;
     private final MenuRepository menuRepository;
-
-//    public OrderService(OrderRepository orderRepository, StoreRepository storeRepository,OrderMenuRepository orderMenuRepository){
-//        this.orderRepository = orderRepository;
-//        this.storeRepository = storeRepository;
-//        this.orderMenuRepository = orderMenuRepository;
-//    }
 
     //주문 등록
     @Transactional
@@ -44,13 +38,15 @@ public class OrderService {
         Store store = storeRepository.findById(storeId).orElseThrow(
             () -> new DataNotFoundException("해당 가게는 존재하지 않습니다")
         );
+        Process process = Process.COMPLETED;
+
         List<Long> ids = orderRequest.getMenuList().stream()
             .map(OrderMenuList::getMenuId)
             .toList();
 
         List<Menu> menus = menuRepository.findAllById(ids);
 
-        Order order = new Order(store, user);
+        Order order = new Order(store, user, process);
 
         List<OrderMenu> orderMenus = menus.stream().map(OrderMenu::new).toList();
         orderMenus.forEach(order::addOrderMenu);
@@ -77,6 +73,7 @@ public class OrderService {
 //    }
 
 //페이징 시도
+    @Transactional(readOnly = true)
     public Page<OrderResponseDto> getAllOrder(int page, String sortBy, boolean isAsc) {
         Sort.Direction direction = isAsc ?  Sort.Direction.ASC : Sort.Direction.DESC;
         Sort sort = Sort.by(direction, sortBy);
@@ -84,11 +81,11 @@ public class OrderService {
         Page<Order> orderList;
         orderList = orderRepository.findAll(pageable);
         return orderList.map(OrderResponseDto::new);
-
     }
 
     //주문 수정
-    public OrderResponseDto updateOrdeer(Long orderId, OrderRequestDto orderRequestDto, User user) {
+    @Transactional
+    public OrderResponseDto updateOrdeer(Long orderId, OrderRequestDto orderRequest, User user) {
        Order order = orderRepository.findById(orderId).orElseThrow(
             () -> new DataNotFoundException("해당 주문은 존재하지 않습니다")
         );
@@ -96,12 +93,19 @@ public class OrderService {
             throw new ForbiddenException("수정 권한이 없습니다.");
         }
 
-        List<Long> ids = orderRequestDto.getMenuList().stream().map(OrderMenuList::getMenuId).toList();
-        List<OrderMenu> orderMenus = orderMenuRepository.findByIdIn(ids);
+        List<Long> ids = orderRequest.getMenuList().stream()
+            .map(OrderMenuList::getMenuId)
+            .collect(Collectors.toList());
 
+        List<Menu> menus = menuRepository.findAllById(ids);
+
+        List<OrderMenu> orderMenus = menus.stream()
+            .map(OrderMenu::new)
+            .collect(Collectors.toList());
         order.update(orderMenus);
-        orderRepository.save(order);
-        return new OrderResponseDto(order);
+
+        Order savedOrder = orderRepository.save(order);
+        return new OrderResponseDto(savedOrder);
     }
 
     //주문 삭제
@@ -112,6 +116,7 @@ public class OrderService {
         if (!order.getUser().getId().equals(user.getId())) {
             throw new ForbiddenException("삭제 권한이 없습니다.");
         }
+//        Process process = Process.CANCELED;
         orderRepository.delete(order);
     }
 }
